--- a/webservice/backend/pom.xml
+++ b/webservice/backend/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>flyway-core</artifactId>
             <version>5.0.7</version>
         </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 
 
