--- a/webservice/backend/pom.xml
+++ b/webservice/backend/pom.xml
@@ -43,6 +43,11 @@
             <version>1</version>
         </dependency>
         <dependency>
+            <groupId>ca.krasnay</groupId>
+            <artifactId>sqlbuilder</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
