--- a/webservice/frontend/package.json
+++ b/webservice/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "style-loader": "^0.21.0",
