--- a/webservice/frontend/package.json
+++ b/webservice/frontend/package.json
@@ -19,6 +19,8 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
+    "less": "^3.5.3",
+    "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8"
