--- a/webservice/frontend/package.json
+++ b/webservice/frontend/package.json
@@ -14,15 +14,23 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "npm": "^6.1.0"
+    "npm": "^6.1.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "less": "^3.5.3",
     "less-loader": "^4.1.0",
+    "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
