--- a/webservice/frontend/package.json
+++ b/webservice/frontend/package.json
@@ -17,7 +17,8 @@
     "npm": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reset-css": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
