--- a/webservice/frontend/package.json
+++ b/webservice/frontend/package.json
@@ -32,6 +32,12 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
     "less": "^3.5.3",
     "less-loader": "^4.1.0",
