--- a/webservice/frontend/.eslintrc
+++ b/webservice/frontend/.eslintrc
@@ -10,6 +10,7 @@
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/interactive-supports-focus": "off"
+    "jsx-a11y/interactive-supports-focus": "off",
+    "jsx-a11y/label-has-for": "off"
   }
 }
